# optionator

./: .gitignore  CMakeLists.txt  README.md  flake.nix
src/: input.cpp  input.h  main.cpp  option.cpp  option.hpp  simulator.cpp  simulator.h  varcalc.cpp  varcalc.hpp
